Bug 995128 - Restore a CSS rule that was lost in the squashing

--- a/shared/style/dialer/keypad.css
+++ b/shared/style/dialer/keypad.css
@@ -347,3 +347,7 @@
   font-size: 3rem;
   color: #fff;
 }
+
+.full-height {
+  height: 100%;
+}
